bugFix:login form dark mode.

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,5 @@
 $primary-color: #4a90e2;
-$font-stack: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+// $font-stack: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
 .login-container {
   display: flex;
@@ -10,11 +10,11 @@ $font-stack: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .login-content {
-  background: white;
+  // background: white;
   padding: 1.5rem;
   margin: 0 1rem;
   border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 10px #ccc;
   width: 100%;
   max-width: 360px;
 }
@@ -26,7 +26,7 @@ $font-stack: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   h2 {
     text-align: center;
     margin-bottom: 1.5rem;
-    color: $primary-color;
+    // color: $primary-color;
   }
 
   label {
